crates/solidity-v2/testing/snapshots/diagnostics_output/syntax/constructor_with_visibility/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 9239] Error: Constructor cannot have visibility.
   ╭─[input.sol:8:5]
   │
 8 │     constructor() external {}
   │     ────────────┬────────────  
   │                 ╰────────────── Error occurred here.
───╯
